[package]
name = "warren"
version = "0.1.2"
edition = "2024"
authors = ["John Arundel <john@bitfieldconsulting.com>"]
description = """
A tool for value investors.
"""
keywords = ["cli", "finance", "investment", "stocks", "trading"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/warren"
homepage = "https://github.com/bitfield/warren"
repository = "https://github.com/bitfield/warren"
exclude = ["/.github/"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = "0.12.24"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
yahoo_finance_api = "3.0.0"
